<resources>
    <string name="app_name">Idiary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_profile">Profile</string>
    <string name="button_add_diary">Add Diary Button</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="label_title">Title</string>
    <string name="diary_hint">How was your day? :D</string>
    <string name="button_delete_button">Delete Image Button</string>
    <string name="image">Image</string>
    <string name="save_diary">Save Diary</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="idiary_logo">Idiary Logo</string>
    <string name="idiary_fancy_text">Idiary Fancy Text</string>
    <string name="splash_screen_image_description">Background Image for the splash screen</string>
    <string name="not_registered_label">Not registered yet?</string>
    <string name="register_now_label">Register Now</string>
    <string name="register">Register</string>
    <string name="already_registered_label">Already registered?</string>
    <string name="more_option_button">More option button</string>
    <string name="diary_image">Diary Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="navigation_instruction">Set up your profile in the profile section!</string>
    <string name="navigation_greeting_text">Hi user!</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="add_a_diary_now">Add a diary now! :)</string>
    <string name="profile_status_instruction">Write your status/quotes here! :D</string>
    <string name="username">Username</string>

    <string name="notification_header">Notification</string>
    <string name="privacy_header">Privacy</string>
    <string name="notification_title">Turn on diary remainder</string>
    <string name="notification_sub_settings_title">Set remainder time</string>
    <string name="privacy_title">Lock diary</string>
    <string name="privacy_summary">Require password to enter Idiary</string>
    <string name="password_title">Password settings</string>
    <string name="password_summary">Set your password here!</string>
    <string name="fingerprint_title">Unlock with fingerprint</string>
    <string name="unlock">Unlock</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="unlock_with_fingerprint">Unlock with fingerprint</string>
    <string name="developer">Developed by Choo Xiang Lun</string>
    <string name="feedback_label">Feel free to contact me via\nxlchoo25@gmail.com\nfor any bugs encountered</string>

</resources>