<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/privacy_header">

        <SwitchPreferenceCompat
                app:key="lock"
                app:title="@string/privacy_title"
                app:summary="@string/privacy_summary"
                app:defaultValue="false" />

        <EditTextPreference
                app:key="password"
                app:title="@string/password_title"
                app:summary="@string/password_summary"
                app:dependency="lock" />

        <SwitchPreferenceCompat
                app:key="fingerprint"
                app:title="@string/fingerprint_title"
                app:dependency="lock"
                app:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>