<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="me.xianglun.idiary.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_feedback"
            android:name="me.xianglun.idiary.ui.feedback.FeedbackFragment"
            android:label="@string/menu_feedback"
            tools:layout="@layout/fragment_feedback" />

    <fragment
            android:id="@+id/nav_profile"
            android:name="me.xianglun.idiary.ui.profile.ProfileFragment"
            android:label="@string/menu_profile"
            tools:layout="@layout/fragment_profile" />
</navigation>