<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.feedback.FeedbackFragment">

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/feedback_card_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardCornerRadius="100dp"
            android:layout_marginTop="50dp"
            android:elevation="20dp"
            android:layout_centerHorizontal="true">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:scaleX=".6"
                android:scaleY=".6"
                android:src="@drawable/ic_idiary_logo"
                android:adjustViewBounds="true"
                android:contentDescription="@string/idiary_logo" />

    </com.google.android.material.card.MaterialCardView>

    <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/idiary_text"
            android:layout_alignTop="@+id/feedback_card_view"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/idiary_fancy_text" />

    <TextView
            android:id="@+id/feedback_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:text="@string/developer"
            android:layout_alignTop="@+id/feedback_card_view"
            android:textSize="19sp" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:text="@string/feedback_label"
            android:lineSpacingExtra="5dp"
            android:layout_alignTop="@+id/feedback_text"
            android:textSize="16sp" />


</RelativeLayout>