<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity"
        android:background="@color/mid_blue">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            app:cardBackgroundColor="@color/dark_blue"
            android:translationZ="-10dp"
            app:cardCornerRadius="60dp" />

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardBackgroundColor="@color/dark_blue"
            android:translationZ="-10dp" />

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/register_card_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardCornerRadius="100dp"
            android:layout_marginTop="30dp"
            android:elevation="5dp"
            android:layout_centerHorizontal="true">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:scaleX=".6"
                android:scaleY=".6"
                android:src="@drawable/ic_idiary_logo"
                android:adjustViewBounds="true"
                android:contentDescription="@string/idiary_logo" />

    </com.google.android.material.card.MaterialCardView>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/idiary_text"
            android:layout_alignTop="@+id/register_card_view"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/idiary_fancy_text" />

    <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/MyTextInputLayout_overlay"
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_below="@+id/register_card_view"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            android:layout_marginTop="100dp"
            app:startIconDrawable="@drawable/ic_icon_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/MyTextInputLayout_overlay"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/register_password"
            android:layout_marginHorizontal="32dp"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_icon_lock"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            android:hint="@string/password"
            android:layout_below="@+id/register_email">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/grey"
            android:textAllCaps="false"
            android:layout_below="@id/register_password"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/mid_red"
            android:elevation="10dp"
            android:layout_marginHorizontal="32dp"
            android:textSize="18sp"
            app:cornerRadius="7dp"
            android:paddingVertical="17dp" />


    <TextView
            android:id="@+id/already_registered_label"
            android:layout_below="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/already_registered_label"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:textSize="16sp" />

    <TextView
            android:id="@+id/register_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/already_registered_label"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/dark_red"
            android:layout_toEndOf="@+id/already_registered_label"
            android:clickable="true"
            android:focusable="true" />

</RelativeLayout>