<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/navigation_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:orientation="vertical"
        android:gravity="bottom">

    <ImageView
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/profile_image"
            android:id="@+id/navigation_imageView" />

    <TextView
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            android:maxLines="1"
            android:id="@+id/navigation_drawer_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/nav_header_vertical_spacing"
            android:textSize="24sp"
            android:text="@string/navigation_greeting_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/navigation_instruction"
            android:maxLines="3"
            android:id="@+id/navigation_quotes" />
</LinearLayout>