<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IntroductoryActivity">

    <ImageView
            android:id="@+id/splash_screen_image"
            android:layout_width="match_parent"
            android:layout_height="950dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_splash_screen"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/splash_screen_image_description" />


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/splash_screen_items_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.card.MaterialCardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cardCornerRadius="100dp"
                android:elevation="5dp"
                app:layout_constraintVertical_bias=".2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:scaleX=".6"
                    android:scaleY=".6"
                    android:src="@drawable/ic_idiary_logo"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/idiary_logo" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/idiary_text"
                android:contentDescription="@string/idiary_fancy_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:scaleY="2.1"
                android:scaleX="2.1"
                app:lottie_rawRes="@raw/book"
                app:layout_constraintVertical_bias=".8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>