<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mid_blue"
        tools:context=".ui.profile.ProfileFragment">

    <RelativeLayout
            android:translationZ="-10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="550dp"
                app:cardCornerRadius="50dp"
                android:layout_alignParentBottom="true"
                app:cardBackgroundColor="@color/white" />

        <androidx.cardview.widget.CardView
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardBackgroundColor="@color/white" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/mid_blue"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardCornerRadius="100dp"
            android:elevation="5dp"
            android:layout_marginTop="100dp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/profile_pic_card_view">

        <ImageButton
                android:id="@+id/profile_pic_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:scaleType="centerCrop"
                android:scaleY="1.2"
                android:scaleX="1.2"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/profile_image" />

    </androidx.cardview.widget.CardView>

    <TextView
            android:id="@+id/profile_username"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/username"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_pic_card_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:drawablePadding="10dp"
            app:drawableRightCompat="@drawable/ic_icon_edit" />


    <TextView
            android:id="@+id/profile_status"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/profile_status_instruction"
            android:layout_marginHorizontal="30dp"
            app:drawableRightCompat="@drawable/ic_icon_edit"
            tools:layout_editor_absoluteX="30dp"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>