<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LockScreenActivity"
        android:background="@color/mid_blue">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            app:cardBackgroundColor="@color/dark_blue"
            android:translationZ="-10dp"
            app:cardCornerRadius="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/dark_blue"
            android:translationZ="-10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/cardView3" />

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/lockscreen_card_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardCornerRadius="100dp"
            android:layout_marginTop="90dp"
            android:elevation="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lockscreen_animation_view"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:scaleY="1"
                android:scaleX="1"
                app:lottie_rawRes="@raw/unlock" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/welcome_back"
            android:id="@+id/welcome_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            app:layout_constraintTop_toBottomOf="@id/lockscreen_card_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lockscreen_password" />


    <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/MyTextInputLayout_overlay"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/lockscreen_password"
            android:layout_marginHorizontal="32dp"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_icon_lock"
            app:endIconMode="password_toggle"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/lockscreen_button"
            app:layout_constraintTop_toBottomOf="@id/welcome_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/lockscreen_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/unlock"
            android:textAllCaps="false"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/mid_red"
            android:elevation="10dp"
            android:layout_marginHorizontal="32dp"
            android:textSize="18sp"
            app:cornerRadius="7dp"
            android:paddingVertical="17dp"
            app:layout_constraintTop_toBottomOf="@+id/lockscreen_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>